--- a/resume.html
+++ b/resume.html
@@ -60,10 +60,10 @@
   <p STYLE="font-size:13.0pt"><i>Research Engineer</i>, Dhaka, Bangladesh. JAN'20-OCT'20</p>
 
   <h4>Smart Retina (formerly known as Think Bricks)</h4>
-  <p STYLE="font-size:13.0pt"><i>Software Engineer Intern, Artificial Intelligence</i>Boston,MA,USA. FEB'19-APR'19</p>
+  <p STYLE="font-size:13.0pt"><i>Software Engineer Intern, Artificial Intelligence, </i>Boston,MA,USA. FEB'19-APR'19</p>
   
   <h4>North South University</h4>
-  <p STYLE="font-size:13.0pt"><i>Research Assistant <span STYLE="font-size:8.0pt">under the supervision of 
+  <p STYLE="font-size:13.0pt"><i>Research Assistant <span STYLE="font-size:9.0pt">under the supervision of 
     <a href="http://ece.northsouth.edu/people/dr-nabeel-mohammed/">Dr. Nabeel Mohammed</a>
     </span></i>, Dhaka, Bangladesh. JAN'19-DEC'19</p>
 
@@ -72,8 +72,8 @@
 
   <h3 class="resume_accent">Languages</h3>
   <ul>
-      <li>Bangla, Native</li>
-      <li>English, Fluent</li>
+      <li>Bangla - Native</li>
+      <li>English - Fluent</li>
   </ul>
 </div>
 
