--- a/resume.html
+++ b/resume.html
@@ -7,6 +7,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Labib Chowdhury</title>
 <link rel="stylesheet" href="./stylesheet.css">
+<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+
 </head>
 <body>
 
@@ -29,7 +31,7 @@
   <h2>Labib Imam Chowdhury</h2>
   <p style="font-size:18.0pt">Machine Learning Engineer/Researcher.</p>
   <p>Email: labib.nsucse@gmail.com</p>
-  <p><a href="https://drive.google.com/file/d/11zgC83HOwXl8S3OzkuY0Rvcx5T8m6g08/view?usp=sharing" target="_blank"><img src = './icons/cv_icons.png'style="width:30px;height:30px;">Download resume</a></p>
+  <p><a href="https://drive.google.com/file/d/11zgC83HOwXl8S3OzkuY0Rvcx5T8m6g08/view?usp=sharing" target="_blank"><i class="far fa-file-pdf" style="color:red"></i>Download resume</a></p>
   <br>
 
   <h3 class="resume_accent">Technical Skills</h3>
