add flicker icons

--- a/index.html
+++ b/index.html
@@ -33,14 +33,18 @@
     <div class="about_text">
         <h2>Labib Imam Chowdhury</h2>
         <!-- <p>Hi, I'm Labib Imam Chowdhury, you can call me Labib</p> -->
-        <p2 style="font-size:13.0pt">I am a Machine Learning Engineer and Researcher. I have been working in this field for almost three years now. Apart from engineering, I do consultency for startups or companies who are struggling with their machine learning project. For that you can email me or dm me on LinkedIn.</p2>
+        <p2 style="font-size:13.0pt">I am a Machine Learning Engineer and Researcher. 
+            I have been working in the ML/DL field for almost three years. I am working as a Software Engineer(AI/ML) at Sheba Technologies, 
+            where I mostly worked on Biometrics and Computer Vision applications. I am also an active researcher, 
+            currently trying to solve the data imbalance problems in Medical Imaging. Apart from engineering and research, 
+            I do consultancy for startups or companies who are struggling with their machine learning projects. For that, you can email me or dm me on LinkedIn.</p2>
         <div class="about_links_wrapper">
             <a class="about_links" target="blank" href="https://www.linkedin.com/in/labib-chowdhury-nsucse/"><img src = './icons/174857.png'style="width:45px;height:45px;"></a>
             <a class="about_links" target="blank" href="https://github.com/jongli747"><img src = './icons/25231.png'style="width:45px;height:45px;"></a>
-            <a class="about_links" target="blank" href="https://scholar.google.com/citations?user=wV_lM9wAAAAJ&hl=en&authuser=1"><img src = './icons/scholar.png'style="width:45px;height:45px;"></a>
+            <a class="about_links" target="blank" href="https://scholar.google.com/citations?user=wV_lM9wAAAAJ&hl=en&authuser=1"><img src = './icons/scholar.png'style="width:45px;height:45px;background-color:white;"></a>
             <a class="about_links" target="blank" href="https://www.researchgate.net/profile/Labib-Chowdhury-2"><img src = './icons/ResearchGate_icon_SVG.svg.png'style="width:45px;height:45px;"></a>
             <a class="about_links" target="blank" href="https://twitter.com/Labib747"><img src = './icons/Twitter-Logo.png'style="width:45px;height:45px;"></a>
-            <a class="about_links" target="blank" href="https://www.flickr.com/photos/125744710@N08/"><img src = './icons/flicker.png'style="width:45px;height:45px;"></a>
+            <a class="about_links" target="blank" href="https://www.flickr.com/photos/125744710@N08/"><img src = './icons/flickr-icon-logo-vector.svg'style="width:45px;height:45px;"></a>
         </div>
     </div>
 </div>
