--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             <a class="about_links" target="blank" href="https://www.flickr.com/photos/125744710@N08/"><img src = './icons/flickr-icon-logo-vector.svg'style="width:45px;height:45px;"></a>
         </div>
     </div>
+      <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/915342/t/3"></script>
 </div>
 
 
