--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <a style="color:#3498DB" href="./index.html">About</a>
             <a href="./resume.html">Resume</a>
             <a href="./research.html">Research</a>
+            <a href="./contact.html">Contact</a>
             <!-- <a href="./portfolio.html">Portfolio</a>
             <a href="./blog.html">Blog</a> -->
         </div>
@@ -47,7 +48,6 @@
             <a class="about_links" target="blank" href="https://www.flickr.com/photos/125744710@N08/"><img src = './icons/flickr-icon-logo-vector.svg'style="width:45px;height:45px;"></a>
         </div>
     </div>
-      <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/915342/t/3"></script>
 </div>
 
 
