--- a/resume.html
+++ b/resume.html
@@ -18,6 +18,7 @@
             <a href="./index.html">About</a>
             <a style="color:#3498DB" href="./resume.html">Resume</a>
             <a href="./research.html">Research</a>
+            <a href="./contact.html">Contact</a>
             <!-- <a href="./portfolio.html">Portfolio</a>
             <a href="./blog.html">Blog</a> -->
         </div>
@@ -30,7 +31,7 @@
 <div class="main">
   <h2>Labib Imam Chowdhury</h2>
   <p style="font-size:18.0pt">Machine Learning Engineer/Researcher.</p>
-  <p>Email: labib.nsucse@gmail.com</p>
+  <p><i class="fas fa-envelope" style="color:#4285F4"></i> labib.nsucse@gmail.com</p>
   <p><a href="https://drive.google.com/file/d/11zgC83HOwXl8S3OzkuY0Rvcx5T8m6g08/view?usp=sharing" target="_blank"><i class="far fa-file-pdf" style="color:red"></i> Download resume</a></p>
   <!-- <br> -->
 
