--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
             currently trying to solve the data imbalance problems in Medical Imaging. Apart from engineering and research, 
             I do consultancy for startups or companies who are struggling with their machine learning projects. For that, you can email me or dm me on LinkedIn.</p2>
         <div class="about_links_wrapper">
-            <a class="about_links" target="blank" href="https://www.linkedin.com/in/labib-chowdhury-nsucse/"><img src = './icons/174857.png'style="width:45px;height:45px;"></a>
-            <a class="about_links" target="blank" href="https://github.com/jongli747"><img src = './icons/25231.png'style="width:45px;height:45px;"></a>
-            <a class="about_links" target="blank" href="https://scholar.google.com/citations?user=wV_lM9wAAAAJ&hl=en&authuser=1"><img src = './icons/scholar.png'style="width:45px;height:45px;background-color:white;"></a>
-            <a class="about_links" target="blank" href="https://www.researchgate.net/profile/Labib-Chowdhury-2"><img src = './icons/ResearchGate_icon_SVG.svg.png'style="width:45px;height:45px;"></a>
-            <a class="about_links" target="blank" href="https://twitter.com/Labib747"><img src = './icons/Twitter-Logo.png'style="width:45px;height:45px;"></a>
-            <a class="about_links" target="blank" href="https://www.flickr.com/photos/125744710@N08/"><img src = './icons/flickr-icon-logo-vector.svg'style="width:45px;height:45px;"></a>
+            <a class="about_links" target="blank" href="https://www.linkedin.com/in/labib-chowdhury-nsucse/"><img src = './img/icons/174857.png'style="width:45px;height:45px;"></a>
+            <a class="about_links" target="blank" href="https://github.com/jongli747"><img src = './img/icons/25231.png'style="width:45px;height:45px;"></a>
+            <a class="about_links" target="blank" href="https://scholar.google.com/citations?user=wV_lM9wAAAAJ&hl=en&authuser=1"><img src = './img/icons/scholar.png'style="width:45px;height:45px;background-color:white;"></a>
+            <a class="about_links" target="blank" href="https://www.researchgate.net/profile/Labib-Chowdhury-2"><img src = './img/icons/ResearchGate_icon_SVG.svg.png'style="width:45px;height:45px;"></a>
+            <a class="about_links" target="blank" href="https://twitter.com/Labib747"><img src = './img/icons/Twitter-Logo.png'style="width:45px;height:45px;"></a>
+            <a class="about_links" target="blank" href="https://www.flickr.com/photos/125744710@N08/"><img src = './img/icons/flickr-icon-logo-vector.svg'style="width:45px;height:45px;"></a>
         </div>
     </div>
 </div>
