--- a/resume.html
+++ b/resume.html
@@ -32,7 +32,7 @@
   <h2>Labib Imam Chowdhury</h2>
   <p style="font-size:18.0pt">Machine Learning Engineer/Researcher.</p>
   <p><i class="fas fa-envelope" style="color:#4285F4"></i> labib.nsucse@gmail.com</p>
-  <p><a href="https://drive.google.com/file/d/11zgC83HOwXl8S3OzkuY0Rvcx5T8m6g08/view?usp=sharing" target="_blank"><i class="far fa-file-pdf" style="color:red"></i> Download resume</a></p>
+  <p><a href="https://labib-resume.s3.amazonaws.com/Labib_Chowdhury.pdf" target="_blank"><i class="far fa-file-pdf" style="color:red"></i> Download resume</a></p>
   <!-- <br> -->
 
   <h3 class="resume_accent">Technical Skills</h3>
