update recent info

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         <h2>Labib Imam Chowdhury</h2>
         <!-- <p>Hi, I'm Labib Imam Chowdhury, you can call me Labib</p> -->
         <p2 style="font-size:13.0pt">I am a Machine Learning Engineer and Researcher. 
-            I have been working in the ML/DL field for almost three years. I am working as a Software Engineer(AI/ML) at Sheba Technologies, 
-            where I mostly worked on Biometrics and Computer Vision applications. I am also an active researcher, 
-            currently trying to solve the data imbalance problems in Medical Imaging. Apart from engineering and research, 
+            I have been working in the ML/DL field for more than three years. I am working as a Machine Learning Engineer at Giga Tech Limited, 
+            where I am working on Natural Language Processing on Bangla language. I am also an active researcher, 
+            currently trying to solve the data imbalance problems in Medical Imaging and Biometrics. Apart from engineering and research, 
             I do consultancy for startups or companies who are struggling with their machine learning projects. For that, you can email me or dm me on LinkedIn.</p2>
         <div class="about_links_wrapper">
             <a class="about_links" target="blank" href="https://www.linkedin.com/in/labib-chowdhury-nsucse/"><img src = './img/icons/174857.png'style="width:45px;height:45px;"></a>
