--- a/resume.html
+++ b/resume.html
@@ -51,8 +51,14 @@
 
   <h3 class="resume_accent">Experience</h3>
 
+  <h4>Giga Tech Limited</h4>
+  <p STYLE="font-size:13.0pt"><i>ML Engineer/Deputy Manager</i>, Dhaka, Bangladesh. Apr'2022-current</p>
+
+  <h4>Width.ai</h4>
+  <p STYLE="font-size:13.0pt"><i>Computer Vision Consultant</i>, Richmond, Virginia, USA. Jan'2022-current</p>
+
   <h4>Sheba Technologies</h4>
-  <p STYLE="font-size:13.0pt"><i>Software Engineer(AI/ML)</i>, Dhaka, Bangladesh. DEC'20-current</p>
+  <p STYLE="font-size:13.0pt"><i>Software Engineer(AI/ML)</i>, Dhaka, Bangladesh. DEC'20-MAR'2022</p>
   <!-- <ul>
     <li>Wrote network simulations and algorithms in the Python programming language using the NumPy and Pandas libraries for data visualisation.</li>
     <li>Published research at top ranked journals and conferences including MDPI Journal Sensors (SJR Q1) and IEEE GlobeCom.</li>
