updated at 14th June

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
     </div>
     <div class="footer">
-        <p>&copy;2022 labibchowdhury</p>
+        <p>&copy;2023 labibchowdhury</p>
     </div>
 </div>
 
@@ -34,11 +34,14 @@
     <div class="about_text">
         <h2>Labib Imam Chowdhury</h2>
         <!-- <p>Hi, I'm Labib Imam Chowdhury, you can call me Labib</p> -->
-        <p2 style="font-size:13.0pt">I am a Machine Learning Engineer and Researcher. 
-            I have been working in the ML/DL field for more than three years. I am working as a Machine Learning Engineer at Giga Tech Limited, 
-            where I am working on Natural Language Processing on Bangla language. I am also an active researcher, 
-            currently trying to solve the data imbalance problems in Medical Imaging and Biometrics. Apart from engineering and research, 
-            I do consultancy for startups or companies who are struggling with their machine learning projects. For that, you can email me or dm me on LinkedIn.</p2>
+        <p2 style="font-size:13.0pt">As a seasoned Machine Learning Engineer and Researcher, 
+            I bring with me four years of expertise in the ML/DL field. Currently, 
+            I hold the position of a Machine Learning Engineer at Giga Tech Limited, 
+            where my primary focus lies in Natural Language Processing specifically for the Bangla language.
+            Beyond my role as an engineer, I am an avid researcher, dedicated to resolving data imbalance challenges in the domains of Medical Imaging and Biometrics.
+            My experience extends to successfully managing teams comprising 8-10 individuals, overseeing multiple projects ranging from $300K to $2.8M in budget.
+            
+            In addition to my engineering and research endeavors, I offer consultancy services to startups or companies facing difficulties with their machine learning projects. Feel free to reach out to me via email or connect with me on LinkedIn for further discussion.</p2>
         <div class="about_links_wrapper">
             <a class="about_links" target="blank" href="https://www.linkedin.com/in/labib-chowdhury-nsucse/"><img src = './img/icons/174857.png'style="width:45px;height:45px;"></a>
             <a class="about_links" target="blank" href="https://github.com/jongli747"><img src = './img/icons/25231.png'style="width:45px;height:45px;"></a>
