--- a/research.html
+++ b/research.html
@@ -23,7 +23,7 @@
         </div>
     </div>
     <div class="footer">
-        <p>&copy;2022 labibchowdhury</p>
+        <p>&copy;2023 labibchowdhury</p>
     </div>
 </div>
 
@@ -62,6 +62,17 @@
     <br>
 
     <h4 class = "research_accent"> Conference</h4>
+
+    <h5>SentiGOLD: A Large Bangla Gold Standard Multi-Domain Sentiment Analysis Dataset and its Evaluation</h4>
+        <p><i>Md. Ekramul Islam, <b>Labib Chowdhury</b>, Faisal Ahamed Khan, Shazzad Hossain, Sourave Hossain, Mohammad Mamun Or Rashid, Nabeel Mohammed, Mohammad Ruhul Amin  
+            "SentiGOLD: A Large Bangla Gold Standard Multi-Domain Sentiment Analysis Dataset and its Evaluation" 
+            29TH ACM SIGKDD CONFERENCE ON KNOWLEDGE DISCOVERY AND DATA MINING (KDD), 2023, 
+            doi: 10.1145/3580305.3599904.
+        </i></p>
+        <div class="publication_links_wrapper">
+            <a class="about_publication" href="https://arxiv.org/abs/2306.06147v1" target="_blank"><i class="far fa-file-pdf" style="color:red"></i></a>
+        </div>
+
     <h5>Curricular SincNet: Towards Robust Deep Speaker Recognition by Emphasizing Hard Samples in Latent Space</h4>
         <p><i><b>L. Chowdhury</b>, M. Kamal, N. Hasan and N. Mohammed, 
             "Curricular SincNet: Towards Robust Deep Speaker Recognition by Emphasizing Hard Samples in Latent Space," 
