--- a/resume.html
+++ b/resume.html
@@ -24,7 +24,7 @@
         </div>
     </div>
     <div class="footer">
-      <p>&copy;2022 labibchowdhury</p>
+      <p>&copy;2023 labibchowdhury</p>
     </div>
 </div>
 
@@ -32,12 +32,12 @@
   <h2>Labib Imam Chowdhury</h2>
   <p style="font-size:18.0pt">Machine Learning Engineer/Researcher.</p>
   <p><i class="fas fa-envelope" style="color:#4285F4"></i> labib.nsucse@gmail.com</p>
-  <p><a href="https://labib-resume.s3.amazonaws.com/Labib_Chowdhury.pdf" target="_blank"><i class="far fa-file-pdf" style="color:red"></i> Download resume</a></p>
+  <!-- <p><a href="https://labib-resume.s3.amazonaws.com/Labib_Chowdhury.pdf" target="_blank"><i class="far fa-file-pdf" style="color:red"></i> Download resume</a></p> -->
   <!-- <br> -->
 
   <h3 class="resume_accent">Technical Skills</h3>
   <ul>
-    <li><b>Advanced</b>: Python, PyTorch, Numpy, OpenCV, Scikit-Learn, Image Processing, Biometrics Application, FastAPI, Flask, RESTfulAPI.</li>
+    <li><b>Advanced</b>: Python, PyTorch, Numpy, OpenCV, Scikit-Learn, FastAPI, Flask, RESTfulAPI, ML System Design, ML Application.</li>
     <li><b>Intermediate</b>: Tensorflow, Keras, Docker, LaTex, C, Algorithms, Signal Processing, OCR, Amazon Web Services (AWS), MongoDB, Redis.</li>
     <li><b>Beginner</b>: MATLAB, C++, SQLite, Django, Google Cloud Platform (GCP).</li>
   </ul>
@@ -52,10 +52,10 @@
   <h3 class="resume_accent">Experience</h3>
 
   <h4>Giga Tech Limited</h4>
-  <p STYLE="font-size:13.0pt"><i>ML Engineer/Deputy Manager</i>, Dhaka, Bangladesh. Apr'2022-current</p>
+  <p STYLE="font-size:13.0pt"><i>ML Engineer / Deputy Manager</i>, Dhaka, Bangladesh. Apr'2022-current</p>
 
   <h4>Width.ai</h4>
-  <p STYLE="font-size:13.0pt"><i>Computer Vision Consultant</i>, Richmond, Virginia, USA. Jan'2022-current</p>
+  <p STYLE="font-size:13.0pt"><i>Computer Vision Consultant</i>, Richmond, Virginia, USA. Jan'2022-Feb'2023</p>
 
   <h4>Sheba Technologies</h4>
   <p STYLE="font-size:13.0pt"><i>Software Engineer(AI/ML)</i>, Dhaka, Bangladesh. DEC'20-MAR'2022</p>
