--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         <!-- <p>Hi, I'm Labib Imam Chowdhury, you can call me Labib</p> -->
         <p2 style="font-size:13.0pt">As a seasoned Machine Learning Engineer and Researcher, 
             I bring with me four years of expertise in the ML/DL field. Currently, 
-            I hold the position of a Machine Learning Engineer at Giga Tech Limited, 
-            where my primary focus lies in Natural Language Processing specifically for the Bangla language.
+            I hold the position of a Machine Learning Engineer at BLACKBIRD.AI, 
+            where my primary focus lies in multilingual Natural Language Processing.
             Beyond my role as an engineer, I am an avid researcher, dedicated to resolving data imbalance challenges in the domains of Medical Imaging and Biometrics.
             My experience extends to successfully managing teams comprising 8-10 individuals, overseeing multiple projects ranging from $300K to $2.8M in budget.
             
