--- a/resume.html
+++ b/resume.html
@@ -30,7 +30,7 @@
 
 <div class="main">
   <h2>Labib Imam Chowdhury</h2>
-  <p style="font-size:18.0pt">Machine Learning Engineer/Researcher.</p>
+  <p style="font-size:18.0pt">Machine Learning Engineer / Researcher.</p>
   <p><i class="fas fa-envelope" style="color:#4285F4"></i> labib.nsucse@gmail.com</p>
   <!-- <p><a href="https://labib-resume.s3.amazonaws.com/Labib_Chowdhury.pdf" target="_blank"><i class="far fa-file-pdf" style="color:red"></i> Download resume</a></p> -->
   <!-- <br> -->
@@ -51,8 +51,12 @@
 
   <h3 class="resume_accent">Experience</h3>
 
+  <h4>BLACKBIRD.AI</h4>
+  <p STYLE="font-size:13.0pt"><i>ML Engineer</i>, NYC, USA. OCT'2023-current</p>
+
+
   <h4>Giga Tech Limited</h4>
-  <p STYLE="font-size:13.0pt"><i>ML Engineer / Deputy Manager</i>, Dhaka, Bangladesh. Apr'2022-current</p>
+  <p STYLE="font-size:13.0pt"><i>ML Engineer</i>, Dhaka, Bangladesh. Apr'2022-Aug'2023</p>
 
   <h4>Width.ai</h4>
   <p STYLE="font-size:13.0pt"><i>Computer Vision Consultant</i>, Richmond, Virginia, USA. Jan'2022-Feb'2023</p>
